# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.10
#

2005-09-02 20:21:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-55

    Summary:
      rss, merge improvements from piotr
    Revision:
      itools--main--0.10--patch-55

    Patches applied:
    
     * piotr@macuk.pl--public/itools--rss--0.10--patch-10
       merging
    
     * piotr@macuk.pl--public/itools--rss--0.10--patch-11
       decode and encode datetime with timezone info
    
     * piotr@macuk.pl--public/itools--rss--0.10--patch-12
       added some missing blank lines (conding style)
    

    modified files:
     Changelog rss/rss.py rss/test_rss.py

    new patches:
     piotr@macuk.pl--public/itools--rss--0.10--patch-10
     piotr@macuk.pl--public/itools--rss--0.10--patch-11
     piotr@macuk.pl--public/itools--rss--0.10--patch-12


2005-08-27 15:39:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-54

    Summary:
      merge from the 0.9 branch
    Revision:
      itools--main--0.10--patch-54

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.9--patch-108
       types, fix FileName so it detects type extensions in uppercase
    
     * jdavid@itaapy.com--public/itools--main--0.9--patch-109
       catalog, stored fields can keep list values, it is a hack
    
     * jdavid@itaapy.com--public/itools--main--0.9--patch-110
       handlers, fix "Folder.copy_handler"
    

    modified files:
     Changelog catalog/Catalog.py datatypes/primitive.py
     handlers/Folder.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.9--patch-108
     jdavid@itaapy.com--public/itools--main--0.9--patch-109
     jdavid@itaapy.com--public/itools--main--0.9--patch-110


2005-08-26 10:12:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-53

    Summary:
      update the MANIFEST file, include xfig figures
    Revision:
      itools--main--0.10--patch-53


    modified files: