@@ -139,11 +139,9 @@ schema = {'title': Unicode,
           'description': Unicode,
           'language': Unicode,
           'copyright': Unicode,
-          # 'pubDate': TZDateTime,
-          'pubDate': Unicode,
+          'pubDate': TZDateTime,
           'ttl': Integer,
-          # 'lastBuildDate': TZDateTime,
-          'lastBuildDate': Unicode,
+          'lastBuildDate': TZDateTime,
           'generatora': Unicode,
           'url': URI,
           'width': Integer,
